--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <link id="favicon" rel="icon" href="https://avatars.githubusercontent.com/u/68832673?s=400&u=87d5c13650ee341f6b53c763e21f3e126abf5d03&v=4" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>GBA EMU 0.4.3 🎃</title>
+    <title>GBA EMU 0.4.4 </title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    <img src="https://raw.githubusercontent.com/FunnyToyotaCamry/GBA-Images/main/download.gif" width="50" height="50"
+    <img src="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" width="50" height="50"
          align=left>
-    <img src="https://raw.githubusercontent.com/FunnyToyotaCamry/GBA-Images/main/download.gif" width="50" height="50"
+    <img src="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" width="50" height="50"
          align=right>
     <h1><b>GBA EMU</h1>
     <hr>
-    <p>Welcome to GBA EMU! Version 0.4.3🎃</p>
-    <p>Changelog: Spooky Theme for halloween >:D </p>
+    <p>Welcome to GBA EMU! Version 0.4.4</p>
+    <p>Changelog: Happy November! Nothing changed except spooky stuff removed </p>
     <a href="https://linktr.ee/gbachaos">LinkTree!</a>
     <br>
     <br>
