--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link id="favicon" rel="icon" href="https://avatars.githubusercontent.com/u/68832673?s=400&u=87d5c13650ee341f6b53c763e21f3e126abf5d03&v=4" type="image/x-icon">
+    <link id="favicon" rel="icon" href="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>GBA EMU 0.4.4 </title>
