--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <hr>
     <p>Welcome to GBA EMU! Version 0.4.4</p>
     <p>Changelog: Happy November! Nothing changed except spooky stuff removed </p>
+    <p>Remember to not fail No Nut November! I'll give you 2 tickets.</p>
     <a href="https://linktr.ee/gbachaos">LinkTree!</a>
     <br>
     <br>
