--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link id="favicon" rel="icon" href="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>GBA EMU 0.4.4 </title>
+    <title>GBA EMU 0.4.5 </title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -16,14 +16,17 @@
          align=right>
     <h1><b>GBA EMU</h1>
     <hr>
-    <p>Welcome to GBA EMU! Version 0.4.4</p>
-    <p>Changelog: Happy November! Nothing changed except spooky stuff removed </p>
+    <p>Welcome to GBA EMU! Version 0.4.5</p>
+    <p>Changelog: Little Website ReDesign, and found a way to make proper buttons! </p>
     <p>Remember to not fail No Nut November! I'll give you 2 tickets.</p>
-    <a href="https://linktr.ee/gbachaos">LinkTree!</a>
     <br>
     <br>
+    <a href="https://linkt.ree/gbachaos">
+        <button>Linktree</button>
+        <a href="https://gba-chaos.github.io/GBA_EMUhelp/">
+            <button>Help Site</button>
     <a href="https://raw.githubusercontent.com/FunnyToyotaCamry/GBA-Images/main/yo%20my%20uber%20kinda%20small.png">
-        <button>my uber kinda small lol</button>
+        <button>uber meme</button>
               <ul>
             <li><a href="./launcher.html#advancewars">Advance Wars</a></li>
             <li><a href="./launcher.html#advancewars2">Advance Wars 2</a></li>
