--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>Remember to not fail No Nut November! I'll give you 2 tickets.</p>
     <br>
     <br>
-    <a href="https://linkt.ree/gbachaos">
+    <a href="https://linktr.ee/gbachaos">
         <button>Linktree</button>
         <a href="https://gba-chaos.github.io/GBA_EMUhelp/">
             <button>Help Site</button>
