--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <button>Linktree</button>
         <a href="https://gba-chaos.github.io/GBA_EMUhelp/">
             <button>Help Site</button>
-    <a href="https://raw.githubusercontent.com/FunnyToyotaCamry/GBA-Images/main/yo%20my%20uber%20kinda%20small.png">
-        <button>uber meme</button>
+    <a href="https://raw.githubusercontent.com/GBA-Chaos/gba-chaos.github.io/gh-pages/Walter_White_S5B.png">
+        <button>My name is Walter Hartwell White. I live at 308 Negra Arroyo Lane, Albuquerque, New Mexico, 87104. To all law enforcement entities, this is not an admission of guilt. I am speaking to my family now. Skyler, you are the love of my life. I hope you know that. Walter Jr., you're my big man. There are going to be some things that you'll come to learn about me in the next few days. But just know that no matter how it may look, I only had you in my heart. Goodbye.</button>
               <ul>
             <li><a href="./launcher.html#advancewars">Advance Wars</a></li>
             <li><a href="./launcher.html#advancewars2">Advance Wars 2</a></li>
