--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <hr>
     <p>Welcome to GBA EMU! Version 0.4.5</p>
     <p>Changelog: Little Website ReDesign, and found a way to make proper buttons! </p>
-    <p>Remember to not fail No Nut November! I'll give you 2 tickets.</p>
+    <p>Your tickets have expired. if you nutted as they expired, you failed.</p>
     <br>
     <br>
     <a href="https://linktr.ee/gbachaos">
@@ -26,7 +26,7 @@
         <a href="https://gba-chaos.github.io/GBA_EMUhelp/">
             <button>Help Site</button>
     <a href="https://raw.githubusercontent.com/GBA-Chaos/gba-chaos.github.io/gh-pages/Walter_White_S5B.png">
-        <button>My name is Walter Hartwell White. I live at 308 Negra Arroyo Lane, Albuquerque, New Mexico, 87104. To all law enforcement entities, this is not an admission of guilt. I am speaking to my family now. Skyler, you are the love of my life. I hope you know that. Walter Jr., you're my big man. There are going to be some things that you'll come to learn about me in the next few days. But just know that no matter how it may look, I only had you in my heart. Goodbye.</button>
+        <button>waltuh</button>
               <ul>
             <li><a href="./launcher.html#advancewars">Advance Wars</a></li>
             <li><a href="./launcher.html#advancewars2">Advance Wars 2</a></li>
