--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1><b>GBA EMU</h1>
     <hr>
     <p>Welcome to GBA EMU! Version 0.4.5</p>
-    <p>Changelog: Little Website ReDesign, and found a way to make proper buttons! </p>
-    <p>Your tickets have expired. if you nutted as they expired, you failed.</p>
+    <p>Changelog: Dark Edition Released</p>
+    <p>no nut november guys!!!11111</p>
     <br>
     <br>
     <a href="https://linktr.ee/gbachaos">
@@ -27,6 +27,8 @@
             <button>Help Site</button>
     <a href="https://raw.githubusercontent.com/GBA-Chaos/gba-chaos.github.io/gh-pages/Walter_White_S5B.png">
         <button>waltuh</button>
+        <a href="https://gba-chaos.github.io/GBA_Dark/">
+            <button>Dark Edition.</button>
               <ul>
             <li><a href="./launcher.html#advancewars">Advance Wars</a></li>
             <li><a href="./launcher.html#advancewars2">Advance Wars 2</a></li>
