--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1><b>GBA EMU</h1>
     <hr>
     <p>Welcome to GBA EMU! Version 0.4.5</p>
-    <p>Changelog: Moved Game Buttons</p>
+    <p>Changelog:nothing, just quick maintenance stuff</p>
     <p>no nut november guys!!!11111</p>
     <br>
     <br>
