--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
          align=right>
     <h1><b>GBA EMU</h1>
     <hr>
-    <p>Welcome to GBA EMU! Version 0.4.5</p>
-    <p>Changelog:nothing, just quick maintenance stuff</p>
+    <p>Welcome to GBA EMU! Version 0.4.7</p>
+    <p>Changelog:Im thinking of discontinuing this, i haven't been in the mood to work on this :( </p>
     <p>no nut november guys!!!11111</p>
     <br>
     <br>
@@ -29,6 +29,8 @@
         <button>waltuh</button>
         <a href="https://gba-chaos.github.io/GBA_Dark/">
             <button>Dark Edition.</button>
+            <a href="https://gba-chaos.github.io/Credits">
+                <button>Credits</button>
               <ul>
 <li><a href="./launcher.html#advancewars">Advance Wars</a></li>
 <li><a href="./launcher.html#advancewars2">Advance Wars 2</a></li>
