--- a/Credits.html
+++ b/Credits.html
@@ -23,3 +23,6 @@
     <p>Developers</p>
     <p>FunnyToyotaCamry</p>
     <p>TheRiceFarmer</p>
+
+    <a href="gba-chaos.github.io">
+        <button>Return.</button>
