--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link id="favicon" rel="icon" href="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>GBA EMU 0.4.5 </title>
+    <title>GBA EMU 0.4.7 </title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -14,9 +14,9 @@
          align=left>
     <img src="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" width="50" height="50"
          align=right>
-    <h1><b>GBA EMU</h1>
+    <h1><b>GBA Chaos's GBA Emulator</h1>
     <hr>
-    <p>Welcome to GBA EMU! Version 0.4.7</p>
+    <p>Version 0.4.7</p>
     <p>Changelog:Im thinking of discontinuing this, i haven't been in the mood to work on this :( </p>
     <p>no nut november guys!!!11111</p>
     <br>
