--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1><b>GBA Chaos's GBA Emulator</h1>
     <hr>
     <p>Version 0.4.7</p>
-    <p>Changelog:Im thinking of discontinuing this, i haven't been in the mood to work on this :( </p>
-    <p>no nut november guys!!!11111</p>
+    <p>Changelog:Final Days.</p>
+    <p>Message:The Final Update Will be released in 11/16/23</p>
     <br>
     <br>
     <a href="https://linktr.ee/gbachaos">
