--- a/ERROR.html
+++ b/ERROR.html
@@ -5,24 +5,25 @@
     <link id="favicon" rel="icon" href="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>GBA EMU 0.4.5 </title>
+    <title>GBA EMU 0.4.???? </title>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
+    <iframe width="0" height="0" src="https://eu-central.storage.cloudconvert.com/tasks/27bfbe4a-a13f-46c4-a332-46491d4e056c/The%20Caretaker%20-%20Libet%27s%20Delay-C6ZvOCYSOVQ.mp3?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=cloudconvert-production%2F20231114%2Ffra%2Fs3%2Faws4_request&X-Amz-Date=20231114T163109Z&X-Amz-Expires=86400&X-Amz-Signature=225605210ab1da8675fcdce04454639c7287e6aa6a98f3bc4f98cba037b1e86b&X-Amz-SignedHeaders=host&response-content-disposition=inline%3B%20filename%3D%22The%20Caretaker%20-%20Libet%27s%20Delay-C6ZvOCYSOVQ.mp3%22&response-content-type=audio%2Fmpeg&x-id=GetObject" frameborder="0" allowfullscreen></iframe>
 
 <body>
     <img src="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" width="50" height="50"
          align=left>
     <img src="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" width="50" height="50"
          align=right>
-    <h1><b>GBA EMU</h1>
+    <h1><b>ERROR</h1>
     <hr>
-    <p>Credits</p>
-    <p>Emulator code</p>
-  <p>theclashman2>/p>
-    <p>jsemu</p>
-    <p>Developers</p>
-    <p>FunnyToyotaCamry</p>
-    <p>TheRiceFarmer</p>
+    <p>THERE IS NO ESCAPE.</p>
+    <p>RUN AWAY.</p>
+  <p>RUN. RUN. RUN.>/p>
+    <p>ERROR</p>
+    <p>THERE IS NOT ENOUGH TIME.</p>
+    <p>THERE IS NO ESCAPE.</p>
+    <p>HELP. HELP.</p>
 
-    <a href="gba-chaos.github.io">
+    <a href="gba-chaos2.github.io/ERROR">
         <button>Return.</button>
