--- a/ERROR.html
+++ b/ERROR.html
@@ -25,5 +25,5 @@
     <p>THERE IS NO ESCAPE.</p>
     <p>HELP. HELP.</p>
 
-    <a href="gba-chaos2.github.io/ERROR">
-        <button>Return.</button>
+    <a href="https://eu-central.storage.cloudconvert.com/tasks/27bfbe4a-a13f-46c4-a332-46491d4e056c/The%20Caretaker%20-%20Libet%27s%20Delay-C6ZvOCYSOVQ.mp3?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=cloudconvert-production%2F20231114%2Ffra%2Fs3%2Faws4_request&X-Amz-Date=20231114T163109Z&X-Amz-Expires=86400&X-Amz-Signature=225605210ab1da8675fcdce04454639c7287e6aa6a98f3bc4f98cba037b1e86b&X-Amz-SignedHeaders=host&response-content-disposition=inline%3B%20filename%3D%22The%20Caretaker%20-%20Libet%27s%20Delay-C6ZvOCYSOVQ.mp3%22&response-content-type=audio%2Fmpeg&x-id=GetObject">
+        <button>Escape.</button>
