--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <li><a href="./launcher.html#zelda_minish">The Legend of Zelda: The Minish Cap</a></li>
 <li><a href="./launcher.html#simpsons">The Simpsons: California rush hour lol</a></li>
 <li><a href="./launcher.html#mortal_kombat">Mortal Kombat</a></li>
-</li><a href="https://raw.githubusercontent.com/FunnyToyotaCamry/website/master/Legends_Of_Zelda">Legends of Zelda?</a>
+</li><a href="https://gba-chaos2.github.io/ERROR">Legends of Zelda</a>
                 
                  
         </ul>
