--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <hr>
     <p>Version 0.4.7</p>
     <p>Changelog:Final Days.</p>
-    <p>Message:The Final Update Will be released in 11/16/23</p>
+    <p>Message:So Here is what's gonna happen, The site will be private from now on to avoid it getting blocked, it will require a password only my friend ashton has access to. That's it for now. I'll work on making the website private. Thanks for your support.</p>
     <br>
     <br>
     <a href="https://linktr.ee/gbachaos">
