--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
          align=left>
     <img src="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" width="50" height="50"
          align=right>
-    <h1><b>GBA Chaos's GBA Emulator</h1>
+    <h1><b>Alan's Private GBA Emulator</h1>
     <hr>
-    <p>Version 0.4.7</p>
-    <p>Changelog:Final Days.</p>
-    <p>Message:So Here is what's gonna happen, The site will be private from now on to avoid it getting blocked, it will require a password only my friend ashton has access to. That's it for now. I'll work on making the website private. Thanks for your support.</p>
+    <p>Version 0.5.1</p>
+    <p>Changelog:Closed</p>
+    <p>Message:Hey Person whos using this (either ashton or khyler) thanks for using my website :) your the only people that used it, thanks for your support!</p>
     <br>
     <br>
     <a href="https://linktr.ee/gbachaos">
