--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 </head>
 
 <body>
-    <img src="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" width="50" height="50"
+    <img src="https://raw.githubusercontent.com/GBA-CHAOS2/CLOSED23213fds3/gh-pages/scubi.jpeg" width="512" height="50"
          align=left>
-    <img src="https://i.scdn.co/image/ab67616d00001e02b8b42a17e0e8779dcb3773ce" width="50" height="50"
+    <img src="https://raw.githubusercontent.com/GBA-CHAOS2/CLOSED23213fds3/gh-pages/scubi.jpeg" width="512" height="50"
          align=right>
-    <h1><b>Alan's Private GBA Emulator</h1>
+    <h1><b>scoobis Private GBA Emulator</h1>
     <hr>
-    <p>Version 0.5.1</p>
-    <p>Changelog:Closed</p>
-    <p>Message:Hey Person whos using this (either ashton or khyler) thanks for using my website :) your the only people that used it, thanks for your support!</p>
+    <p>Version 0.5.scoobis</p>
+    <p>Changelog:sboocis</p>
+    <p>Message:scoobis takeover</p>
     <br>
     <br>
     <a href="https://linktr.ee/gbachaos">
         <button>Linktree</button>
         <a href="https://gba-chaos.github.io/GBA_EMUhelp/">
             <button>Help Site</button>
-    <a href="https://raw.githubusercontent.com/GBA-Chaos/gba-chaos.github.io/gh-pages/Walter_White_S5B.png">
-        <button>waltuh</button>
+    <a href="https://github.com/GBA-CHAOS2/CLOSED23213fds3/blob/gh-pages/scubi.jpeg?raw=true">
+        <button>scoobis</button>
         <a href="https://gba-chaos.github.io/GBA_Dark/">
             <button>Dark Edition.</button>
             <a href="https://gba-chaos.github.io/Credits">
